<resources>
    <string name="app_name">Espaço Cultural</string>
    <string name="registration">Matrícula</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="login">Login</string>
    <string name="action_visits">Visitas</string>
    <string name="action_home">Página inicial</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Desconectar</string>
    <string name="nav_open">Abrir menu</string>
    <string name="nav_close">Fechar menu</string>
    <string name="user_picture_description">Foto do usuário</string>
    <string name="registration_field">Matrícula:</string>
    <string name="security_category">Segurança</string>
    <string name="need_password">Exigir senha</string>
    <string name="notification_caategory">Notificações</string>
    <string name="new_exposition">Novas exposições</string>
    <string name="interations">Interações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Titulo</string>
    <string name="autor">Autor</string>
    <string name="description">Descrição</string>
    <string name="comment">Comentario</string>
    <string name="send_comment">Enviar comentario</string>
    <string name="no_users_confirmed">Nenhum usuário confirmado</string>
    <string name="notifications">Notificações</string>
    <string name="solicited_schedules">Horarios solicitados</string>
    <string name="detect_artwork">Detectar obra</string>
</resources>