<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />

        <item
            android:id="@+id/nav_visits"
            android:icon="@drawable/ic_event"
            android:title="@string/action_visits" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_active"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

    <item android:title="" >
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>